# metapac

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  config.toml  dist-workspace.toml  metapac.desktop  out.txt  out2.txt  out3.txt  todo.txt
.github/: FUNDING.yml
.github/workflows/: appimage.yml  ci.yml
groups/: example_group.toml
metapac/: PKGBUILD
metapac-bin/: PKGBUILD
pkg/AppImage/: AppImage.sh
pkg/GIT/: PKGBUILD
src/: backend_ex.rs  cli.rs  cmd.rs  completions.rs  config.rs  core.rs  group_file_package.rs  groups.rs  hooks.rs  items.rs  lib.rs  main.rs  package.rs  prelude.rs
src/backends/: all.rs  apt.rs  arch.rs  brew.rs  bun.rs  cargo.rs  dnf.rs  flatpak.rs  go.rs  mas.rs  mise.rs  mod.rs  nix.rs  npm.rs  pipx.rs  pnpm.rs  rustup.rs  scoop.rs  snap.rs  uv.rs  vscode.rs  winget.rs  xbps.rs  yarn.rs  zypper.rs
tests/: cli_tests.rs
tmp_config/metapac/: config.toml
tmp_config/metapac/groups/: default.toml
wix/: main.wxs
